Added basic HTML structure for timer component

--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -1,1 +1,34 @@
-<p>timer works!</p>
+<div class="content">
+    <div class="content-timer">
+        <div class="content-h">
+            <div class="timer">00 <span>h</span> </div>
+            <div class="content-btn">
+                <button type="button" aria-label="Increase minutes"> + </button>
+                <button type="button" aria-label="Decrease minutes"> - </button>
+            </div>
+        </div>
+        <div class="content-m">
+            <div class="time">00 <span>m</span> </div>
+            <div class="content-btn">
+                <button type="button" aria-label="Increase minutes"> + </button>
+                <button type="button" aria-label="Decrease minutes"> - </button>
+            </div>
+        </div>
+        <div class="content-s">
+            <div class="time">00 <span>s</span> </div>
+            <div class="content-btn">
+                <button type="button" aria-label="Increase minutes"> + </button>
+                <button type="button" aria-label="Decrease minutes"> - </button>
+            </div>
+        </div>
+        <div class="content-btn-action">
+            <button type="button" aria-label="Start timer">&#9658;</button>
+            <button type="button" aria-label="Stop timer">&#9724;</button>
+            <button type="button" aria-label="Reset timer">&#8635;</button>
+        </div>
+    </div>
+    <audio #idAudio controls class="dnone">
+        <source type="audio/mp3" src="assets/sound/danger-alarm-sound-effect.mp3">
+        Your browser does not support the audio element.
+    </audio>
+</div>
