--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+$color-blue: #4A90E2;
+$color-purple: #7B61FF;
+$color-white: #FFFFFF;
+$color-grey-dark: #1C1C1E;
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background: linear-gradient(270deg, $color-blue 0%, $color-purple 100%);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    font-family: 'lato', sans-serif;
+    color: $color-white;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*hide audio*/
+.dnone {
+    display: none;
+}
