Created styles for content and content-timer

--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -1,7 +1,7 @@
 <div class="content">
     <div class="content-timer">
         <div class="content-h">
-            <div class="timer">00 <span>h</span> </div>
+            <div class="time">00 <span>h</span> </div>
             <div class="content-btn">
                 <button type="button" aria-label="Increase minutes"> + </button>
                 <button type="button" aria-label="Decrease minutes"> - </button>
