--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,5 +55,57 @@ body {
                 }
            }
         }
+
+        .content-btn {
+            text-align: center;
+
+            button {
+                font-size: 2.8rem;
+                width: 3rem;
+                margin: 0 10px;
+                border-radius: 10px;
+                border: none;
+                outline: inherit;
+                color: $color-purple;
+                background-color: $color-grey-dark;
+            }
+
+            :hover {
+                background: $color-white;
+                transition: 0.5s;
+                transform: scale(0.8);
+                cursor: pointer;  
+            }
+        }
+    }
+
+    .content-btn-action {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        margin-top: 5rem;
+        padding-bottom: 3rem;
+
+        button {
+            font-size: 5rem;
+            width: 6.5rem;
+            margin: 0 30px;
+            border-radius: 20px;
+            border: none;
+            outline: inherit;
+            color: $color-purple;
+            background: $color-grey-dark;
+
+            &:hover {
+                background-color: $color-white;
+                transition: 0.6s;
+                transform: scale(0.8);
+                cursor: pointer;
+            }
+
+            &:disabled {
+                opacity: 0.3;
+            }
+        }
     }
 }
