--- a/src/styles.scss
+++ b/src/styles.scss
@@ -109,3 +109,18 @@ body {
         }
     }
 }
+
+//ANIMATION
+@keyframes move_timer {
+    20%,
+    50%,
+    80%{
+        transform: translateY(0px);
+    }
+    30%{
+        transform: translateY(-45px);
+    }
+    60%{
+        transform: translateY(-25px);
+    }
+}
