--- a/src/app/timer/timer.component.scss
+++ b/src/app/timer/timer.component.scss
@@ -1,3 +1,37 @@
-.move {
-    animation: move_timer 1s infinite;
+@keyframes move_timer {
+  20%, 50%, 80% {
+    transform: translateY(20px);
   }
+
+  30% {
+    transform: translateY(-10px);
+  }
+
+  60% {
+    transform: translateY(-10px);
+  }
+}
+
+.move {
+  animation: move_timer 2s infinite;
+}
+
+@media screen and (max-width: 657px) {
+  @keyframes move_timer_657 {
+    20%, 50%, 80% {
+      transform: translateY(0px);
+    }
+
+    30% {
+      transform: translateY(-5px);
+    }
+
+    60% {
+      transform: translateY(-5px);
+    }
+  }
+
+  .move {
+    animation: move_timer 2.5s ease-in-out infinite;
+  }
+}
