--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ $color-grey-dark: #1C1C1E;
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -30,19 +31,21 @@ body {
     width: 50rem;
     height: auto;
     border-radius: 1.5rem;
+    padding: 2rem;
 
     .content-timer {
         display: flex;
         justify-content: center;
+        align-items: center;
         padding-top: 5rem;
 
         .content-h,
         .content-m,
         .content-s {
-           width: 16rem;
-           height: 10rem; 
+            width: 16rem;
+            height: 10rem;
 
-           .time {
+            .time {
                 font-size: 130px;
                 color: $color-white;
                 font-weight: 300;
@@ -51,18 +54,21 @@ body {
                 span {
                     font-size: 3.5rem;
                     font-weight: 500;
-                    color: $color-purple
+                    color: $color-purple;
                 }
-           }
+            }
         }
 
         .content-btn {
             text-align: center;
-
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            position: relative;
             button {
                 font-size: 2.8rem;
                 width: 3rem;
-                margin: 0 10px;
+                margin: 0 5px;
                 border-radius: 10px;
                 border: none;
                 outline: inherit;
@@ -74,7 +80,7 @@ body {
                 background: $color-white;
                 transition: 0.5s;
                 transform: scale(0.8);
-                cursor: pointer;  
+                cursor: pointer;
             }
         }
     }
@@ -110,17 +116,147 @@ body {
     }
 }
 
-//ANIMATION
-@keyframes move_timer {
-    20%,
-    50%,
-    80%{
-        transform: translateY(0px);
+@media screen and (max-width: 1024px) {
+    .content-timer {
+        padding-top: 3rem;
+
+        .content-h,
+        .content-m,
+        .content-s {
+            width: 14rem;
+            height: 9rem;
+
+            .time {
+                font-size: 110px;
+
+                span {
+                    font-size: 3rem;
+                }
+            }
+        }
     }
-    30%{
-        transform: translateY(-45px);
+
+    .content-btn-action button {
+        font-size: 4rem;
+        width: 5rem;
     }
-    60%{
-        transform: translateY(-25px);
+}
+
+@media screen and (max-width: 820px) {
+    body {
+        overflow: hidden;
+    }
+
+    .content {
+        transform: scale(0.7);
+    }
+
+    .content-timer .content-h,
+    .content-timer .content-m,
+    .content-timer .content-s,
+    .content-timer .content-btn {
+        margin-top: 2rem;
+    }
+
+    .content {
+        width: 90%;
+        padding: 1.5rem;
+        margin-left: 2.0rem ;
+    }
+
+    .content-timer {
+        padding-top: 2rem;
+        flex-wrap: wrap;
+        gap: 4rem;
+
+
+        .content-h,
+        .content-m,
+        .content-s {
+            width: 10rem;
+            height: 6rem;
+
+            .time {
+                font-size: 80px;
+
+                span {
+                    font-size: 2.5rem;
+                }
+            }
+        }
+
+        .content-m .time {
+            margin-left: 17px;
+        }
+
+        .content-btn {
+            display: flex;
+            justify-content: center;
+            gap: 5px;
+
+            button {
+                font-size: 2.5rem;
+                width: 2.5rem;
+            }
+        }
+    }
+
+    .content-btn-action button {
+        font-size: 3.5rem;
+        width: 4.5rem;
+        margin: 0 15px;
+    }
+}
+
+
+@media screen and (max-width: 480px) {
+    body {
+        overflow: hidden;
+    }
+    
+    .content {
+        width: 100%;
+        padding: 1rem;
+        margin-left: 1.3rem;
+    }
+
+    .content-timer {
+        padding-top: 1.5rem;
+        flex-direction: column;
+
+        .content-h,
+        .content-m,
+        .content-s {
+            width: 8rem;
+            height: 5rem;
+            
+            .time {
+                font-size: 60px;
+
+                span {
+                    font-size: 2rem;
+                }
+            }
+        }
+
+        .content-btn {
+            flex-direction: row;
+            justify-content: center;
+
+            button {
+                font-size: 2rem;
+                width: 2rem;
+            }
+        }
+    }
+
+    .content-btn-action {
+        margin-top: 3rem;
+
+        button {
+            font-size: 3rem;
+            width: 4rem;
+            margin: 0 10px;
+        }
     }
 }
